added fetch all details

--- a/public/main.html
+++ b/public/main.html
@@ -54,6 +54,7 @@
 <script type="text/javascript" src="scripts/ngDialog.min.js"></script>
 
 <script type="text/javascript" src="router.js"></script>
+<script type="text/javascript" src="scripts/dialog_profiling.js"></script>
 <script type="text/javascript" src="scripts/monitoring.js"></script>
 <script type="text/javascript" src="scripts/reports.js"></script>
 <script type="text/javascript" src="scripts/map.js"></script>
