--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<title>ISagip Login</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-indigo.min.css" />
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 		<link rel="stylesheet" href="styles/login.css">
 		<link rel="stylesheet" href="styles/ngDialog.css">
 		<link rel="stylesheet" href="styles/ngDialog-theme-default.css">
@@ -45,8 +45,8 @@
 	<script src="https://www.gstatic.com/firebasejs/3.7.1/firebase-messaging.js"></script>
 
 
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+	<script src="scripts/angular.min.js"></script>
+	<script src="scripts/angular-route.js"></script>
 	<script type="text/javascript" src="scripts/ngDialog.min.js"></script>
 
 
