--- a/public/main.html
+++ b/public/main.html
@@ -5,7 +5,7 @@
   <title>Isagip Dashboard</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-indigo.min.css" />
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link rel="stylesheet" href="styles/ngDialog.css">
   <link rel="stylesheet" href="styles/ngDialog-theme-default.css">
 
@@ -25,7 +25,7 @@
         </nav>
       </div>
     </header>
-    <div class="mdl-layout__drawer">
+    <div id="navDrawer" class="mdl-layout__drawer">
       <span class="mdl-layout-title">Admin Panel</span>
       <nav class="mdl-navigation">
 
@@ -49,8 +49,8 @@
 <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase-messaging.js"></script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+<script src="scripts/angular.min.js"></script>
+<script src="scripts/angular-route.js"></script>
 <script type="text/javascript" src="scripts/ngDialog.min.js"></script>
 
 <script type="text/javascript" src="router.js"></script>
