--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
 	<script src="https://www.gstatic.com/firebasejs/3.7.1/firebase-messaging.js"></script>
 
 
-	<script src="scripts/angular.min.js"></script>
-	<script src="scripts/angular-route.js"></script>
-	<script type="text/javascript" src="scripts/ngDialog.min.js"></script>
+	<script src="libs/angular.min.js"></script>
+	<script src="libs/angular-route.js"></script>
+	<script type="text/javascript" src="libs/ngDialog.min.js"></script>
 
 
 	<script type="text/javascript" src="router.js"></script>
