added some view revisions

--- a/public/main.html
+++ b/public/main.html
@@ -35,6 +35,8 @@
         <a class="mdl-navigation__link" href="#monitoring">Monitoring</a>
         <a class="mdl-navigation__link" href="#reports">Reports</a>
         <a class="mdl-navigation__link" href="#map">Map</a>
+        <a class="mdl-navigation__link" href="#sender">Sender</a>
+        <a class="mdl-navigation__link" href="#feedback">Feedback</a>
         <a ng-click="logOut()" id="btnLogout" class="mdl-navigation__link" href="#">Logout</a>
       </nav>
     </div>
@@ -67,6 +69,8 @@
 <script type="text/javascript" src="scripts/monitoring.js"></script>
 <script type="text/javascript" src="scripts/reports.js"></script>
 <script type="text/javascript" src="scripts/map.js"></script>
+<script type="text/javascript" src="scripts/feedback.js"></script>
+<script type="text/javascript" src="scripts/sender.js"></script>
 
 
 
