--- a/public/main.html
+++ b/public/main.html
@@ -2,12 +2,13 @@
 <html ng-app="myApp" >
 <head>
   <meta charset="utf-8">
-  <title>Isagip Dashboard</title>
+  <title>iSagip Organizations Panel</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-indigo.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link rel="stylesheet" href="styles/ngDialog.css">
   <link rel="stylesheet" href="styles/ngDialog-theme-default.css">
+  <link rel="stylesheet" href="styles/main.css">
 
 </head>
 
@@ -16,15 +17,15 @@
     <header class="mdl-layout__header mdl-layout__header--colored">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">ISagip</span>
+        <span class="mdl-layout-title">ISagip | {{ Page.title() }}</span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation -->
         <nav class="mdl-navigation">
         <!--Notification Icon here-->
-        <a style="color:#fff;" ng-click="showNotif()" href="#" >
+        <!-- <a style="color:#fff;" ng-click="showNotif()" href="#" >
           <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">notifications</div>
-        </a>
+        </a> -->
         </nav>
       </div>
     </header>
@@ -33,10 +34,7 @@
       <nav class="mdl-navigation">
 
         <a class="mdl-navigation__link" href="#monitoring">Monitoring</a>
-        <a class="mdl-navigation__link" href="#reports">Reports</a>
-        <a class="mdl-navigation__link" href="#map">Map</a>
-        <a class="mdl-navigation__link" href="#sender">Sender</a>
-        <a class="mdl-navigation__link" href="#feedback">Feedback</a>
+        <a class="mdl-navigation__link" href="#operations">Operations</a>
         <a ng-click="logOut()" id="btnLogout" class="mdl-navigation__link" href="#">Logout</a>
       </nav>
     </div>
@@ -71,6 +69,7 @@
 <script type="text/javascript" src="scripts/map.js"></script>
 <script type="text/javascript" src="scripts/feedback.js"></script>
 <script type="text/javascript" src="scripts/sender.js"></script>
+<script type="text/javascript" src="scripts/operations.js"></script>
 
 
 
