--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
 
 
                 <button ng-click="logIn()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Log in </button>
-
-                <button ng-click="signUp()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> Sign Up </button>
+                <a ng-click="forgotPass()" href="" style="float: right; margin: 15px 50px;" href="">Forgot password</a>
+               
                 <div id="progressBar" class="mdl-spinner mdl-spinner--single-color mdl-js-spinner"></div>
             </form>
         </div>
